# syze

./: Cargo.toml  README.md
.github/workflows/: build-and-release.yml  build-release.yml  upload-release.yml
src/: main.rs
