[package]
name = "syze"
description = "clie to view the size of files and folders in the current directory"
version = "0.1.16"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.7"
colored = "2.0.0"
